syntax = "proto3";

option java_multiple_files = true;
option java_package = "tech.tushar.addressbook";
option java_outer_classname = "AddressBookProtos";

option csharp_namespace = "Tushar.Protobuf.AddressBook";
option objc_class_prefix = "AB";

import "google/api/annotations.proto";

package addressbook;

message Person {
  int32 id = 1;  // Unique ID number for this person.
  string name = 2;
  string email = 3;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    string phoneNumber = 1;
    PhoneType phoneType = 2;
  }

  repeated PhoneNumber phoneNumber = 4;
}

message Persons {
  repeated Persons people = 1;
}

message Id {
  int32 id = 1;
}

message Empty {

}

// Our address book file is just one of these.
message Book {
  repeated Person people = 1;
}

service AddressBook {
  rpc GetPersons(Empty) returns (Persons) {
    option(google.api.http) = {
      get: "/api/v1/persons"
    };
  }

  rpc GetAdressBook(Id) returns (Book) {
    option(google.api.http) = {
      get: "/api/v1/{id}"
    };
  }
}
